01-Networking/03-gateway/01-Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: my-ca-issuer
    cert-manager.io/usages: "client auth,server auth"
spec:
  gatewayClassName: traefik
  listeners:
    - name: weba
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: webb
      hostname: "*.example.com"
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: my-gateway-cert
            kind: Secret
